New MVC architecture and swagger yml file generation process updated.
