# src/authantication/controller.py
@@ -4,12 +4,9 @@ from flask import request
 from .models import Register
 import bcrypt
 from flask_jwt_extended import create_access_token
-from .schema import *
 
-auth_controller = Blueprint("authentication", __name__)
 
-@auth_controller.route('/authentication/register', methods = ["POST"], defaults={'schema': register_schema})
-def register(schema):
+def register(schema = Register.register_schema):
     try:
         enteredInfo = getenteredInfo(request)
         obj = Register.objects(username=enteredInfo.get("username"))
@@ -22,8 +19,7 @@ def register(schema):
     except Exception as e:
         return errorresponse("register", e)
 
-@auth_controller.route('/authentication/login', methods = ["POST"], defaults={'schema': login_schema})
-def login(schema):
+def login(schema = Register.login_schema):
     try:
         enteredInfo = getenteredInfo(request)
         obj = Register.objects(username=enteredInfo.get("username")).first()
